# MovieRentalWeb

./: README.md  movie_rentals.session.sql  pyproject.toml
movie_rentals/: manage.py
movie_rentals/movie_rentals/: asgi.py  settings.py  urls.py  wsgi.py
movie_rentals/movie_web/: admin.py  apps.py  models.py  urls.py  views.py
movie_rentals/movie_web/migrations/: 0001_initial.py  0002_movie.py  0003_auto_20210105_1243.py  0004_auto_20210125_1114.py
movie_rentals/movie_web/static/movie_web/: navbar.css  search_bar.css  style.css
movie_rentals/movie_web/templates/movie_web/: _form.html  base.html  index.html  movie_create.html  movie_delete.html  movie_detail.html  movie_update.html  profile_detail.html  profile_update.html
